[gd_scene load_steps=8 format=3 uid="uid://c8qj2y6yvx3yjb2"]

[ext_resource type="Script" path="res://scenes/shop/modern_shop_item_card.gd" id="1_yjnqm"]
[ext_resource type="Texture2D" path="res://assets/images/ui/coin_icon.png" id="2_coin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.12, 0.12, 0.15, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.8, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.2)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.15, 0.15, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.9, 0.7)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.08, 0.08, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.8, 0.5)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.15, 0.15, 0.2, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.5, 0.5, 0.9, 0.7)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5"]
bg_color = Color(0.08, 0.08, 0.1, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.8, 0.5)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 8

[node name="ModernShopItemCard" type="Panel"]
custom_minimum_size = Vector2(140, 200)
theme_override_styles/panel = SubResource("StyleBoxFlat_1")
script = ExtResource("1_yjnqm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="IconPanel" type="Panel" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="IconTexture" type="TextureRect" parent="VBoxContainer/MarginContainer/IconPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="RarityIndicator" type="ColorRect" parent="VBoxContainer/MarginContainer/IconPanel"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.8, 0.8, 0.8, 1)

[node name="TypeBadge" type="Panel" parent="VBoxContainer/MarginContainer/IconPanel"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_bottom = 24.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_3")

[node name="TypeLabel" type="Label" parent="VBoxContainer/MarginContainer/IconPanel/TypeBadge"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "C"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GlowEffect" type="ColorRect" parent="VBoxContainer/MarginContainer/IconPanel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.5, 0.5, 1, 0.1)

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 14
text = "物品名称"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="PriceContainer" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_4")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PriceContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_right = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="VBoxContainer/PriceContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_coin")
expand_mode = 1
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="VBoxContainer/PriceContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BuyButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 14
text = "购买"

[node name="ShineEffect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="TooltipPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 250.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_5")

[node name="VBoxContainer" type="VBoxContainer" parent="TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="TitleLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 16
text = "物品名称"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "类型: 武器"

[node name="RarityLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 14
text = "稀有度: 传说"

[node name="HSeparator2" type="HSeparator" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 12
text = "物品描述信息..."
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="TooltipPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 1, 0.2, 1)
theme_override_font_sizes/font_size = 12
text = "属性: +10 攻击力"
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/BuyButton" to="." method="_on_buy_button_pressed"]
